test/compile-errors/record-privacy-b.crow
import
	./record-privacy-a

foo void()
	a private-ctor = 0,
	drop: a
	b private-mut = 0, 0, 0
	b.j := 0
	drop: b.j
	b.k := 0
	drop: b.k
	b.l := 0
	drop: b.l
